[build-system]
requires = [
  "setuptools >= 61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "winion"
dynamic = ["version"]
authors = [
  {name="Alex Kwiatkowski", email="alex+pypi@fremantle.io"},
]
description = "A producer/consumer async runtime for Python"
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent"
]
dependencies = [
  "anyio >= 4.3.0",
  "pydantic >=2.5.0",
  # "pydantic-settings >=2.2.1",
  # "PyYAML ~=6.0.1",
  "uvloop >=0.19.0",
]

[project.urls]
Homepage = "https://github.com/rupurt/winion"
Issues = "https://github.com/rupurt/winion/issues"

[project.optional-dependencies]
test = [
  "build >=1.2.1",
  "ruff >=0.3.4",
  "pip-tools >=7.4.1",
  "pygments >=2.17.0",
  "pyhamcrest >=2.1.0",
  "pyright >=1.1.0",
  "pytest >=8.1.0",
  "pytest-asyncio >=0.23.0",
  "pytest-cov >=5.0.0",
  "pytest-unordered >=0.6.0",
  "pytest-watcher >=0.4.0",
  "twine >=5.0.0",
]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

[tool.pytest.ini_options]
markers = []
filterwarnings = []
